--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,8 @@ app.*.map.json
 
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+# My added ignores 
+
+# don't add the api key to version control 
+lib/api_key.dart
