Fix error in cloud function causing CORS issue
- removed parsing error in the cloud function
- added header to request in cloud function for authenticating with igdb
- set content type of request to octet-stream
- added call to decode protobuf data in cloud function
- in flutter app: added function to igdb service so we can test proxied
or not proxied requests

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ lib/api_key.dart
 
 # ts-proto node package 
 util/node_modules
+
+# local environment variables for cloud funcitons emulator
+functions/.runtimeconfig.json
