Fix problem with data from api call in functions
- replaced request package with https package which returns valid data
- refactored igdb_api_service files to separate folder
- refactored api related files in functions/ into separate folder
- setup firestore and downoaded rules and indexes files
- added notes to README on using the firebase emulator suite
- updated typescript for functions/
- added saving to database in cloud function

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -3,7 +3,7 @@ include: package:pedantic/analysis_options.yaml
 analyzer:
   exclude: 
     - build/**
-    - lib/services/igdbapi/**
+    - lib/services/igdb_api/igdb_api_client/**
   strong-mode:
     implicit-casts: false
     implicit-dynamic: false
