--- a/functions/package.json
+++ b/functions/package.json
@@ -22,13 +22,13 @@
     "request-promise": "^4.2.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.6",
+    "@types/request-promise": "^4.1.46",
     "firebase-functions-test": "^0.2.0",
     "ts-proto": "^1.27.1",
     "tslint": "^5.12.0",
-    "typescript": "^3.8.0",
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.6",
-    "@types/request-promise": "^4.1.46"
+    "typescript": "^3.9.7"
   },
   "private": true
 }
