--- a/functions/package.json
+++ b/functions/package.json
@@ -14,14 +14,21 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1"
+    "firebase-functions": "^3.6.1",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.6",
+    "@types/request-promise": "^4.1.46",
     "firebase-functions-test": "^0.2.0",
     "ts-proto": "^1.27.1",
     "tslint": "^5.12.0",
-    "typescript": "^3.8.0"
+    "typescript": "^3.9.7"
   },
   "private": true
 }
